force-app/main/default/objects/Funding_Request__c/Funding_Request__c.object-meta.xml
<CustomObject>
    <label>Funding Request</label>
    <nameField>
        <displayFormat>FR-{0000}</displayFormat>
        <label>Funding Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>