force-app/main/default/objects/Funding_Request__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>