force-app/main/default/objects/Funding_Request__c/fields/Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email__c</fullName>
    <label>Applicant Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>