force-app/main/default/objects/Funding_Request__c/fields/Applicant_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Last_Name__c</fullName>
    <label>Applicant Last Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>