force-app/main/default/objects/Funding_Request__c/fields/Pennsylvania_Resident__c.field-meta.xml
<CustomField>
    <fullName>Pennsylvania_Resident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pennsylvania Resident?</label>
    <type>Checkbox</type>
</CustomField>