force-app/main/default/objects/Funding_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Applicant_Email__c</columns>
    <columns>Applicant_First_Name__c</columns>
    <columns>Applicant_Last_Name__c</columns>
    <columns>Approved__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>