force-app/main/default/objects/Funding_Request__c/listViews/My_Funding_Requests.listView-meta.xml
<ListView>
    <fullName>My_Funding_Requests</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Applicant_Email__c</columns>
    <columns>Approved__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Funding Requests</label>
</ListView>